fix contrast issue on the pricing card

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -484,3 +484,8 @@ span i {
 .further-links {
     margin-top: 10px;
 }
+
+.contrast {
+    font-weight: 500 !important;
+    color: #222 !important;
+}
